--- a/my-project-website/package.json
+++ b/my-project-website/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@types/leaflet": "^1.9.8",
+    "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
