--- a/my-project-website/angular.json
+++ b/my-project-website/angular.json
@@ -20,10 +20,17 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": ["leaflet"],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "/assets/leaflet/"
+              }
             ],
+
             "styles": [
               "src/styles.css"
             ],
