--- a/my-project-website/angular.json
+++ b/my-project-website/angular.json
@@ -27,7 +27,7 @@
               {
                 "glob": "**/*",
                 "input": "./node_modules/leaflet/dist/images",
-                "output": "/assets/leaflet/"
+                "output": "./assets/"
               }
             ],
 
