--- a/my-project-website/package.json
+++ b/my-project-website/package.json
@@ -21,13 +21,14 @@
     "@types/leaflet": "^1.9.8",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
+    "@angular/cli": "^17.3.4",
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.17",
